<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Light"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/tipoU"
        android:layout_width="188dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="510dp"
        android:entries="@array/tipoU"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="291dp"
        android:layout_marginBottom="552dp"
        android:text="@string/tipousert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="397dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="298dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="459dp"
        android:text="@string/usuariot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="356dp"
        android:text="@string/contrasenat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="266dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="181dp"
        android:onClick="logueo"
        android:text="@string/botonEntrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>